Switch to reading location from Google Spreadsheet

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
                 $.ajax({
                     type: 'GET',
                     // TIP: go ahead and try this URL in your browser to see the raw data!
-                    url: 'http://api.lemonade.targetrad.com/location/today',
+                    url: '/api/location',
                     dataType: 'json'
                 }).done(function (data) {
                     // the API call has returned and the result is in the 'data' variable
